# stablehlo

./: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel
stablehlo/builder/: AttrTypeBuilderUtil.cpp  AttrTypeBuilderUtilTest.cpp  BUILD.bazel  ChloBuilder.cpp  ChloBuilder.h  FuncBuilder.cpp  FuncBuilder.h  MlirBuilder.cpp  MlirBuilder.h  MlirBuilderTblgen.cpp  MlirBuilderTest.cpp  README.md  StablehloBuilder.cpp  StablehloBuilder.h  StablehloBuilderTest.cpp
